@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PackageManifest Version="2.0.0" xmlns="http://schemas.microsoft.com/developer/vsx-schema/2011" xmlns:d="http://schemas.microsoft.com/developer/vsx-schema-design/2011">
-  <Metadata>
-    <Identity Id="HotStatus.JustinClareburt.19ee5266-2c00-4c8e-b16b-b9b797ecda0b" Version="1.2.0" Language="en-US" Publisher="Justin Clareburt" />
-    <DisplayName>Hot Status</DisplayName>
-    <Description xml:space="preserve">Displays information on the status bar when caret is on squiggles or symbols in the code.
+    <Metadata>
+        <Identity Id="HotStatus.JustinClareburt.19ee5266-2c00-4c8e-b16b-b9b797ecda0b" Version="1.2.1" Language="en-US" Publisher="Justin Clareburt" />
+        <DisplayName>Hot Status</DisplayName>
+        <Description xml:space="preserve">Displays information on the status bar when caret is on squiggles or symbols in the code.
 Includes error, warning, and info messages. Also shows QuickInfo symbol info.</Description>
-    <MoreInfo>https://marketplace.visualstudio.com/items?itemName=JustinClareburtMSFT.HotStatus</MoreInfo>
-    <ReleaseNotes>ReleaseNotes.txt</ReleaseNotes>
-    <Icon>Resources\HotStatus-icon-128.png</Icon>
-  </Metadata>
-  <Installation>
-    <InstallationTarget Id="Microsoft.VisualStudio.Community" Version="[16.0, 17.0)">
-      <ProductArchitecture>x86</ProductArchitecture>
-    </InstallationTarget>
-    <InstallationTarget Id="Microsoft.VisualStudio.Community" Version="[17.0, )">
-      <ProductArchitecture>amd64</ProductArchitecture>
-    </InstallationTarget>
-  </Installation>
-  <Dependencies>
-    <Dependency Id="Microsoft.Framework.NDP" DisplayName="Microsoft .NET Framework" d:Source="Manual" Version="[4.5,)" />
-  </Dependencies>
-  <Prerequisites>
-    <Prerequisite Id="Microsoft.VisualStudio.Component.CoreEditor" Version="[16.0,)" DisplayName="Visual Studio core editor" />
-  </Prerequisites>
-  <Assets>
-    <Asset Type="Microsoft.VisualStudio.MefComponent" d:Source="Project" d:ProjectName="%CurrentProject%" Path="|%CurrentProject%|" />
-  </Assets>
+        <MoreInfo>https://marketplace.visualstudio.com/items?itemName=JustinClareburtMSFT.HotStatus</MoreInfo>
+        <ReleaseNotes>ReleaseNotes.txt</ReleaseNotes>
+        <Icon>Resources\HotStatus-icon-128.png</Icon>
+    </Metadata>
+    <Installation>
+        <InstallationTarget Id="Microsoft.VisualStudio.Community" Version="[16.0, 17.0)">
+            <ProductArchitecture>x86</ProductArchitecture>
+        </InstallationTarget>
+        <InstallationTarget Id="Microsoft.VisualStudio.Community" Version="[17.0, )">
+            <ProductArchitecture>amd64</ProductArchitecture>
+        </InstallationTarget>
+    </Installation>
+    <Dependencies>
+        <Dependency Id="Microsoft.Framework.NDP" DisplayName="Microsoft .NET Framework" d:Source="Manual" Version="[4.5,)" />
+    </Dependencies>
+    <Prerequisites>
+        <Prerequisite Id="Microsoft.VisualStudio.Component.CoreEditor" Version="[16.0,)" DisplayName="Visual Studio core editor" />
+    </Prerequisites>
+    <Assets>
+        <Asset Type="Microsoft.VisualStudio.MefComponent" d:Source="Project" d:ProjectName="%CurrentProject%" Path="|%CurrentProject%|" />
+    </Assets>
 </PackageManifest>
